# mini-chat

./: .gitattributes  Dockerfile  README.md
client/: README.md  pubspec.yaml
client/android/app/: build.gradle
client/android/app/src/debug/: AndroidManifest.xml
client/android/app/src/main/: AndroidManifest.xml
client/android/app/src/main/kotlin/com/example/minichat_client/: MainActivity.kt
client/ios/Runner/: Info.plist
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: app.dart  app_bar.dart  async.dart  chat.dart  chat_repo.dart  login_screen.dart  main.dart
client/lib/chat/: async_message.dart  chat.dart  chat_input.dart  chat_msg_list.dart  chat_msg_view.dart  user_list.dart
client/lib/chat_repo/: chat_repo.dart  client_frame.dart  fake_chat_repo.dart  server_frame.dart  ws_chat_repo.dart
client/linux/: CMakeLists.txt  my_application.cc
client/macos/Runner.xcodeproj/: project.pbxproj
client/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
client/macos/Runner/Configs/: AppInfo.xcconfig
client/test/: widget_test.dart
client/test/chat_repo/: client_frame_test.dart  frame_test.dart  server_frame_test.dart
client/web/: index.html
client/windows/: CMakeLists.txt
client/windows/runner/: Runner.rc  main.cpp
server/: Cargo.toml
server/src/: context.rs  frame.rs  lib.rs  logic.rs  main.rs  stream.rs  ws.rs
server/src/protocol/: ws.rs
server/tests/: client.rs  frame-encoding-test-vectors.rs  tests.rs
server/tests/suite/: mod.rs
