[package]
name = "minichat-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.68"
borsh = "0.10.1"
bytes = "1.4.0"
dashmap = "5.4.0"
env_logger = "0.10.0"
futures-channel = "0.3.26"
futures-util = "0.3.26"
lazy_static = "1.4.0"
log = "0.4.17"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
tungstenite = "0.18.0"
